--- a/ThinkPHP/app/index/view/common/login.html
+++ b/ThinkPHP/app/index/view/common/login.html
@@ -1,12 +1,23 @@
 
 <link rel='stylesheet' href='__CSS__/login.css'>
 
-
+<link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/4.0.0-beta/css/bootstrap.min.css">
+  <script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/popper.js/1.12.5/umd/popper.min.js"></script>
+  <script src="https://cdn.bootcss.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<!-- <link href="http://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap-theme.min.css" rel="stylesheet"> -->
+<!-- <link href="http://cdn.bootcss.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet"> -->
 
 <div class="container">
 	
 	
+	
 
+
+	{include file="common/message" /}
+
+	
+	
 	<div class="row">
 		<div class="col-md-offset-3 col-md-6 center">
 			<form class="form-horizontal" action="{:url('admin/login/index')}" method="post">
