--- a/ThinkPHP/app/index/view/common/student_base.html
+++ b/ThinkPHP/app/index/view/common/student_base.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Bootstrap 实例</title>
+    <title>计算机学院实验报告在线撰写系统</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="__CSS__/bootstrap4.1.0.min.css">
