--- a/ThinkPHP/app/index/view/common/teacher_base.html
+++ b/ThinkPHP/app/index/view/common/teacher_base.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="__CSS__/bootstrap4.1.0.min.css">
+    <!-- <link rel="stylesheet" href="__CSS__/format.css"> -->
     <script src="__JS__/jquery3.2.1.min.js"></script>
     <script src="__JS__/popper.min.js"></script>
-
     
 </head>
 
@@ -23,28 +23,48 @@
                 <a class="navbar-brand" href="index.html">
                     <!-- <img src="__IMG__/school.png" class="img-circle" /> -->
                     <!-- 设置margin-top,避免logo太大 -->
-                    <img  class="img-circle" alt="Brand" style="max-width:100px;margin-top:-7px;" src="__IMG__/school.png">
+                    <img alt="Brand" style="max-width:100px;margin-top:-7px;" src="__IMG__/school.png">
                 </a>
             </div>
 
             <!-- <div class="navbar-collapse collapse" id="collapsibleNavbar">  -->
             <div class="navbar-collapse collapse" id="collapsibleNavbar">
                 <!-- Links -->
-                <ul class="nav navbar-nav nav-left">
+                <ul class="nav navbar-nav">
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">首页</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">实验课程</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">实验指导</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">发布实验任务</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">批阅实验报告</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="index.html">下拉框管理</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="index.html">统计</a>
                     </li>
 
                 </ul>
             </div>
             <div>
                 <ul class="nav navbar-nav navbar-right">
-
                     <li class="nav-item">
-                        <a class="nav-link" href="{:url('index/index/login')}">
-                            <span class="glyphicon glyphicon-log-in"></span> 登录
-                            <!-- <img alt="Brand" style="max-width:100px;margin-top:-7px;" src="__IMG__/login.png"> -->
-                        </a>
+                        <a class="nav-link" href="{:url('index/login')}">
+                            <span class="glyphicon glyphicon-log-in"></span>欢迎你，{$Think.cookie.think_userName }</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{:url('index/login')}">
+                            
+                            <span class="glyphicon glyphicon-log-out"></span> 登出</a>
                     </li>
                 </ul>
             </div>
