--- a/ThinkPHP/app/index/view/common/message.html
+++ b/ThinkPHP/app/index/view/common/message.html
@@ -2,5 +2,5 @@
         <a href="#" class="close" data-dismiss="alert">
             &times;
         </a>
-        {$Think.cookie.think_loginMessage }
+        {$Think.cookie.think_Message }
 </div>
