--- a/ThinkPHP/app/index/view/common/teacher_base.html
+++ b/ThinkPHP/app/index/view/common/teacher_base.html
@@ -35,7 +35,7 @@
                         <a class="nav-link" href="index.html">首页</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">实验课程</a>
+                        <a class="nav-link" href="course">实验课程</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="index.html">实验指导</a>
