--- a/ThinkPHP/app/index/view/common/teacher_base.html
+++ b/ThinkPHP/app/index/view/common/teacher_base.html
@@ -6,6 +6,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="__CSS__/bootstrap4.1.0.min.css">
+    <!-- <link rel="stylesheet" href="__CSS__/base.css"> -->
     <!-- <link rel="stylesheet" href="__CSS__/format.css"> -->
     <script src="__JS__/jquery3.2.1.min.js"></script>
     <script src="__JS__/popper.min.js"></script>
