--- a/ThinkPHP/app/index/view/teacher/teacher_course.html
+++ b/ThinkPHP/app/index/view/teacher/teacher_course.html
@@ -1,36 +1,145 @@
 {include file="common/teacher_base" /}
 
+<link rel="stylesheet" type="text/css" href="__CSS__/teacher/course.css">
+
 <div>
-    <div>
-        <div id="u104" class="ax_default _标题1">
-            <div id="u104_div" class=""></div>
-            <!-- Unnamed () -->
-            <div id="u105" class="text">
-                <p><span>我的实验课程</span></p>
+    <div class="course-title">
+        <div class="course-title-body">
+            <div class="course-title-body text">
+                <div>
+                    <span><font><strong>实验课程</strong></font></span>
+                </div>
+                
+            </div>
+            <div class="course-title-select"> 
+                <div class='select'>
+                    <select>
+
+                        <option>更多操作</option>
+                        <option>添加课程</option>
+                        <option>同步课程</option>
+                        <option>批量删除</option>
+
+
+                    </select>
+                </div>
             </div>
         </div>
-
-        <!-- Unnamed (下拉列表框) -->
-        <div id="u106" class="ax_default droplist">
-            <select id="u106_input">
-                <option selected value="更多操作">更多操作</option>
-                <option value="添加课程">添加课程</option>
-                <option value="同步课程">同步课程</option>
-                <option value="批量删除">批量删除</option>
-            </select>
-        </div>
-
-        <h3>所有实验课程
-
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggled btn-sm" data-toggle="dropdown">更多操作<span
-                        class="caret"></span></button>
-                <ul class="dropdown-menu" role="menu">
-                    <li><a href="{{url_for('.importAllCourse')}}">同步课程</a></li>
-                    <li><a href="{{url_for('.batchDeleteCourse1')}}">批量删除</a></li>
-                </ul>
-            </div>
-            <!-- {{ search.search(url_for('.course_search'),form) }} -->
-        </h3>
     </div>
-</div>
+
+    <div class="ant-table-container">
+        <div class="ant-table-content">
+            <div class="ant-table-body">
+                <table class="">
+                    <colgroup>
+                        <col style="width: 8%; min-width: 8%;">
+                        <col style="width: 15%; min-width: 15%;">
+                        <col style="width: 8%; min-width: 8%;">
+                        <col style="width: 15%; min-width: 15%;">
+                        <col style="width: 10%; min-width: 10%;">
+                        <col style="width: 8%; min-width: 8%;">
+                        <col style="width: 8%; min-width: 8%;">
+                        <col style="width: 8%; min-width: 8%;">
+                        <col style="width: 15%; min-width: 20%;">
+                    </colgroup>
+                    <thead class="ant-table-thead">
+                        <tr>
+                            <th class="">
+                                <span>课程编号</span>
+                            </th>
+                            <th class="">
+                                <span>课程名称</span>
+                            </th>
+                            <th class="">
+                                <span>任课老师</span>
+                            </th>
+                            <th class="">
+                                <span>任课班级</span>
+                            </th>
+                            <th class="">
+                                <span>任课时间</span>
+                            </th>
+                            <th class="">
+                                <span>课程类型</span>
+                            </th>
+                            <th class="">
+                                <span>实验课时</span>
+                            </th>
+                            <th class="">
+                                <span>考查方式</span>
+                            </th>
+                            <th class="">
+                                <span>操作方式</span>
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody class="ant-table-tbody">
+                        <tr class="ant-table-row">
+                            <td class="">
+                                <span class="">043977</span>
+                            </td>
+                            <td class="">
+                                <span class="">无线传感器网络与物联网通信技术</span>
+                            </td>
+                            <td class="">
+                                <span class="">陶铭</span>
+                            </td>
+                            <td class="">
+                                <span class="">2015计算机科学与技术1,2,3,4班</span>
+                            </td>
+                            <td class="">
+                                <span class="">2018春季学期</span>
+                            </td>
+                            <td class="">
+                                <span class="">选修课</span>
+                            </td>
+                            <td class="">
+                                <span class="">56</span>
+                            </td>
+                            <td class="">
+                                <span class="">考查</span>
+                            </td>
+                            <td class="">
+                                <a href="#">查看所有学生</a>
+                            </td>
+                        </tr>
+                        <tr class="ant-table-row">
+                            <td class="">
+                                <span class="">043972</span>
+                            </td>
+                            <td class="">
+                                <span class="">计算机网络</span>
+                            </td>
+                            <td class="">
+                                <span class="">陶铭</span>
+                            </td>
+                            <td class="">
+                                <span class="">2015软件工程1,2,3,4班</span>
+                            </td>
+                            <td class="">
+                                <span class="">2018春季学期</span>
+                            </td>
+                            <td class="">
+                                <span class="">必修课</span>
+                            </td>
+                            <td class="">
+                                <span class="">56</span>
+                            </td>
+                            <td class="">
+                                <span class="">考试</span>
+                            </td>
+                            <td class="">
+                                <a href="#">查看所有学生</a>
+                            </td>
+                        </tr>
+                        
+                        
+                    </tbody>
+                </table>
+
+            </div><!-- end body-->
+        </div><!-- end content-->
+    </div><!-- end container-->
+</div><!-- end course-->
+
+{include file="common/footer" /}
